BUGFiX: Rename input overlapped the right side controls in project list thumb...

--- a/less/left-menu-1.less
+++ b/less/left-menu-1.less
@@ -101,6 +101,7 @@
   border: 1px solid #666666;
   border-radius: 5px;
   height: 22px;
+  margin-right: 4.0em;
 }
 .prjct-name-input.hidden {
   display: none
