--- a/public/css/main.css
+++ b/public/css/main.css
@@ -265,6 +265,7 @@ body {
   border: 1px solid #666666;
   border-radius: 5px;
   height: 22px;
+  margin-right: 4em;
 }
 .prjct-name-input.hidden {
   display: none;
